--- a/3.html
+++ b/3.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"> 
     <link rel="stylesheet" type="text/css" href="css/style.css"/> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>2 курс 2 сесестр</title> 
+    <title>3 курс</title> 
     <style> 
         body { 
             text-align: center; /* Центрируем текст по горизонтали */ 
@@ -78,11 +78,14 @@
             <a href="one.html"> 
                 <img src="img/3курс1.jpg" alt="Диплом 1"/>
                 <img src="img/благодарность3.jpg" 
-                
+                <img src="img/3 курс 2.jpg" alt="Диплом 2"/>
             </a> 
         </div> 
         <div class="image-wrapper"> 
             <a href="one.html"> 
+                <img src="img/3 курс 3.jpg" alt="">
+                <img src="img/3 курс 4.jpg" alt="">
+                <img src="img/диплом3степени.jpg" alt="">
                 
             </a> 
         </div> 
